<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context=".EditCurrency">


    <TextView
        android:id="@+id/updateToDoTitle"
        android:layout_width="219dp"
        android:layout_height="54dp"
        android:layout_marginTop="70dp"
        android:text="@string/updateTitle"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:fontFamily="@font/bowlby_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/EnterTask"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateToDoTitle" />

    <EditText
        android:id="@+id/updateDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/enterDescription"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/updateTask"
        app:layout_constraintTop_toBottomOf="@+id/updateTask" />

    <EditText
        android:id="@+id/updateAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/enterAmount"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/updateDescription"
        app:layout_constraintTop_toBottomOf="@+id/updateDescription" />

    <EditText
        android:id="@+id/updateDate"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/enterDate"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/updateAmount"
        app:layout_constraintTop_toBottomOf="@+id/updateAmount" />

    <Button
        android:id="@+id/updateToDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/UpdateButtoon"
        android:textColor="@android:color/holo_orange_light"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateDate" />

    <Button
        android:id="@+id/unMarkToDo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:background="@drawable/rounded_button"
        android:text="Unmark"
        android:textColor="@android:color/holo_orange_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateDate" />

</androidx.constraintlayout.widget.ConstraintLayout>